Mainly calcualtion of local energy and setup for nvim/sumatra.

--- a/Implementation/Restricted Boltzmann Machine/Restricted Boltzmann Machine.tex
+++ b/Implementation/Restricted Boltzmann Machine/Restricted Boltzmann Machine.tex
@@ -1,5 +1,1 @@
-\input{Implementation/Restricted Boltzmann Machine/Guassian-Binary RBM}
-\input{Implementation/Restricted Boltzmann Machine/Optimization Methods}
-\input{Implementation/Restricted Boltzmann Machine/The Blocking Method}
-\input{Implementation/Restricted Boltzmann Machine/Machine Structure}
-\input{Implementation/Restricted Boltzmann Machine/Machine Parameter Optimization}
+\input{Implementation/Restricted Boltzmann Machine/Calculation of local energy}
