--- a/Theory/Many-Body Physics/neural net quantum states.tex
+++ b/Theory/Many-Body Physics/neural net quantum states.tex
@@ -1,4 +1,4 @@
-\section{Neural network quantum states}
+\section{Neural network quantum states} \label{sec:nnqs} 
 
 To use a neural network to solve a quantum mechanical system we need a way to represent the quantum state with the neural network. The solution is using neural network quantum states, abbreviated NQS, which was introduced by G. Carlo and M. Troyer in 2017 \cite{Carleo_2017}. A quantum state $\ket{\Psi}$ can be expressed by a neural network as
 
