--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,6 @@
+%% !TeX TXS-program:compile = txs:///pdflatex/[--shell-escape]
 \documentclass[a4paper]{report}
+\synctex=1
 \input{Utility/packages}
 
 \begin{document}
