Removed the commenting out sections in main

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,6 @@
 
 \tableofcontents
 
-
 \chapter{Introduction}
 \input{introduction}
 
@@ -24,11 +23,11 @@
 \part{Implementation}
 \input{Implementation/Implementation}
 
-%\part{Results and Discussion}
-%\input{Results and Discussion/resultsanddiscussion}
+\part{Results and Discussion}
+\input{Results and Discussion/resultsanddiscussion}
 
-%\part{Conclusion}
-%\input{conclusion}
+\part{Conclusion}
+\input{conclusion}
 
 \bibliography{bibliography}
 \end{document}
