--- a/bibliography.bib
+++ b/bibliography.bib
@@ -92,3 +92,30 @@ url={https://doi.org/10.1038/323533a0}
 	publisher = {American Association for the Advancement of Science ({AAAS})},
   
 	volume = {355}}
+
+@misc{NVIDIA,
+  author={NVIDIA},
+  title={NVIDIA},
+  year={2024},
+  url={
+https://www.nvidia.com/en-us/about-nvidia/#About%20Us
+},
+}
+https://www.nvidia.com/en-us/about-nvidia/#About%20Us
+@misc{cuda,
+  author={NVIDIA and Vingelmann, Péter and Fitzek, Frank H.P.},
+  title={Cuda compilation tools, release 12.3, V12.3.103},
+  year={2023},
+  url={https://developer.nvidia.com/cuda-toolkit},
+}
+
+@misc{paszke2019pytorch,
+      title={PyTorch: An Imperative Style, High-Performance Deep Learning Library}, 
+      author={Adam Paszke and Sam Gross and Francisco Massa and Adam Lerer and James Bradbury and Gregory Chanan and Trevor Killeen and Zeming Lin and Natalia Gimelshein and Luca Antiga and Alban Desmaison and Andreas Köpf and Edward Yang and Zach DeVito and Martin Raison and Alykhan Tejani and Sasank Chilamkurthy and Benoit Steiner and Lu Fang and Junjie Bai and Soumith Chintala},
+      year={2019},
+      eprint={1912.01703},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+
