--- a/Implementation/Implementation.tex
+++ b/Implementation/Implementation.tex
@@ -1,5 +1,6 @@
-\chapter{Qiskit}
+\chapter{Libraries and hardware}
 \input{Implementation/Qiskit/qiskit}
+\input{Implementation/use of hardware.tex}
 \chapter{Restricted Boltzmann Machine}
 \input{Implementation/Restricted Boltzmann Machine/Restricted Boltzmann Machine}
 \chapter{Variational Quantum Boltzmann Machine}
