--- a/Implementation/Restricted Boltzmann Machine/Restricted Boltzmann Machine.tex
+++ b/Implementation/Restricted Boltzmann Machine/Restricted Boltzmann Machine.tex
@@ -1,1 +1,2 @@
 \input{Implementation/Restricted Boltzmann Machine/Calculation of local energy}
+\input{Implementation/Restricted Boltzmann Machine/implementation tests}
