Beginning to variance of the Monte Carlo samples.

--- a/Theory/Machine Learning/Controls and Errors.tex
+++ b/Theory/Machine Learning/Controls and Errors.tex
@@ -6,6 +6,6 @@ Seeing how accurate a model is can be use full both during training, to see how 
     MSE = \frac{1}{N} \sum_{i = 1}^N (\boldsymbol{z}_{t, i} - \boldsymbol{z}_{m, i})^2 \; .
 \end{equation}
 
-
+But this can only be done if we have the target solution $\boldsymbol{z_t}$. To determine if a found ground state wavefunction is a good approximation of the true wavefunction, we can use the variance of the local energies of the samples we have. The variance is defined as follows:
 
 
