Started introduction and edited Lipkin hamiltonian implementation.

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,1 +1,7 @@
-Machine learning is becoming more and more prevalent 
+Machine learning is becoming more and more prevalent in everyday life. As hardware has become stronger and learning models has been refined, machine learning has become a powerful tool to solve a wide variety of problems. Physics is no exception to this, as the last few years has shown a number of fields in physics furthered by machine learning. 
+
+[fields in physics using machine learning].
+
+Quantum physics has often avenues for direct application of machine learning, as one wants to fit a wavefunction within the bounds of the hamiltonian. As such there has been several ways of approach. One of them boils down to having the output of the neural net being the wavefunction amplitude, as done by [feed forward neural net article] on the [model] model. Another approach is to have the machine be the wavefunction and letting the output be measured states, for example done by [rbm article] on the [model] model. The Ising and Heisenberg models has seen much attention with respect to machine learning methods, and we will therefor use the less popular Lipkin model [source] as well.
+
+Another computational field that has seen a great increase in interest is the field of quantum computation. Pioneered by [person] and [person], showing that quantum computation has some serious advantages to its classical counterparts in certain areas. A widely used algorithm from quantum computation is the variational quantum eigensolver. And as quantum physics problems can often be simplified as an eigenvalue-problem, we will use this algorithm as a way to compare the machine learning method with an alternative.
