--- a/Implementation/Restricted Boltzmann Machine/Calculation of local energy.tex
+++ b/Implementation/Restricted Boltzmann Machine/Calculation of local energy.tex
@@ -53,22 +53,55 @@ For a more structured explanation we separate the hamiltonian in three parts:
   \item $H_W$ - states one excited or deexcited particle away from $\ket{b}$.
 \end{itemize}
 
-For the $H_{\varepsilon}$ contribution we determine which samples matches which parts of the machine state $\ket{\psi_{rbm}}$. We create a mask showing which basis state each sample matches with, named \mintinline{python}{mask}.
+For the $H_{\varepsilon}$ contribution we start of by calculating the number of particles in the first and second layer.
+
+\begin{minted}{python}
+    N_0 = torch.sum(unique == 0, dim=-1)
+    N_1 = torch.sum(unique == 1, dim=-1)
+\end{minted}
+
+The particles in the first layer contribute with negative spin and the particles in the second layer contribute positivly, so we get that.
+
+\begin{minted}{python} 
+    H_0 = 0.5*eps*(N_1-N_0)
+\end{minted}
 
 We then have an array of the machine states amplitudes multiplied by $\varepsilon$. Applying \mintinline{python}{mask} to this array then selects the correct value for each sample without having to calculate duplicates more than once. We then have the $H_{\varepsilon}$ contribution for each sample directly:
 
-\begin{minted}{python}
-def lipkin_local(samples, eps, V, W):
-    unique, weight = unique_states_amplitude(samples)
-    mask = torch.where(torch.all(samples[:, None] == unique, dim = -1))[1]
-\end{minted}
-
-For the $H_V$ contributions we first need to find each possible one-pair-different basis states that matches with a part of the machine state. Since the machine state is defined as the sample distribution we can check what states are one-pair-different from each other by doing the following:
-
 \begin{minted}{python} 
-    H_0 = 0.5*eps*(torch.sum(unique == 1, dim=-1)- torch.sum(unique == 0, dim = -1))
     H_eps = H_0[mask]
 \end{minted}
+
+We then calculate the difference between the basis states of the machine state, which is the states in \mintinline{python}{unique}, and the number of particles that change layer.
+
+\begin{minted}{python}
+    diff_unique = abs(torch.sum(unique[:, None] - unique), dim=-1)
+    diff_N1 = abs(N_1[:, None] - N_1)
+\end{minted}
+
+The vector arrays are being broadcast to a $N\times N$ matrix. If we denote \mintinline{python}{unique} $ = \boldsymbol{u}$ we have that \mintinline{python}{unique[:, None] - unique} becomes
+
+\begin{equation}
+  \boldsymbol{u}^T - \boldsymbol{ u } = \begin{bmatrix}
+    u_0 \\ u_1 \\ \vdots \\ u_n
+    \end{bmatrix} - \begin{bmatrix} u_0 & u_1 & \dots & u_n \end{bmatrix} \rightarrow \begin{bmatrix}
+    u_0-u_0& u_0-u_1& \dots& u_0-u_n \\
+    u_1-u_0& u_1-u_1& \dots& u_1-u_n \\
+           & & \vdots & & \\
+    u_n-u_0&u_n-u_1 & \dots & u_n-u_n
+
+  \end{bmatrix}
+  \label{eq:imp_ham_lip_unique}
+\end{equation}
+
+Taking the absolute value of the sum of these $u_i - u_j$ elements we get the total number of particles that either excite or de-excite from one state to the next. For the $H_V$ contributions we first need to find each possible one-pair-different basis states. The \mintinline{python}{diff_unique} array does not confirm that a two-particles difference comes the same layer, however, so we need to check with the change in particles in one of the layers as well. We calculate the $H_V$ contribution for the basis states as follows:
+
+\begin{minted}{python} 
+    one_pair = np.bitwise_and(diff_unique==2, diff_N1==2)
+    H_1 = V*torch.sum(weight[:, None]*one_pair, dim=0)/weight
+\end{minted}
+
+where the \mintinline{python}{np.bitwise_and} outputs a $1$ only if both inputs are $1$. 
 
 We check each of the unique states, $\ket{b_i}$, with all the other unique states, $\ket{b_j}$, and see if there are a one-pair-difference between them, setting the element $\left (i, j \right )$ to $1$ if that is the case. As a result we end up with a $N\times N$ matrix, $\mathbf{V}$, where $N$ is the number of unique states. Each pair represents the element
 \begin{equation}
