--- a/Theory/Models/The Lipkin Model.tex
+++ b/Theory/Models/The Lipkin Model.tex
@@ -213,7 +213,7 @@ $J$ is a good quantum number and all other elements in the $H_4$ Hamiltonian bec
 
 And for $J=1$:
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{Figures/Plots/Lipkin/J1_true.pdf}
     \caption{The analytical solution for the LMG model with total spin $J=1$, $\varepsilon = 1$ and $W = 0$.}
