--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -4,7 +4,7 @@
 \input{Theory/Quantum Mechanics/quantummechanics}
 \chapter{Many-Body Methods}
 \input{Theory/Many-Body Physics/manybodymethods}
+\chapter{Models}
+\input{Theory/Models/models}
 \chapter{Quantum Computing}
 \input{Theory/Quantum Computing/quantumcomputing}
-\chapter{Quantum Machine Learning}
-\input{Theory/Quantum Machine Learning/quantummachinelearning}
