--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,7 @@
 @online{LipkinQuasiToPauli,
   author = {Morten Hjort-Jensen},
   title = {Quantum computing and solving the eigenvalue problem for the Lipkin model},
-  year = 2023,
+  year = {2023},
   url = {https://github.com/CompPhysics/QuantumComputingMachineLearning/blob/gh-pages/doc/pub/week9/ipynb/week9.ipynb},
   urldate = {2023-11-10}
 }
@@ -118,4 +118,10 @@ https://www.nvidia.com/en-us/about-nvidia/#About%20Us
       primaryClass={cs.LG}
 }
 
-
+@online{DerivationGradient,
+      title={Derivation of gradient of the expectation of local energy}, 
+      author={Unknown author},
+      year={2019},
+      url={https://physics.stackexchange.com/questions/473533/derivation-of-gradient-of-the-expectation-of-local-energy},
+      urldate={2024-02-09},
+}
