--- a/Theory/Many-Body Physics/manybodymethods.tex
+++ b/Theory/Many-Body Physics/manybodymethods.tex
@@ -1,4 +1,4 @@
 \input{Theory/Many-Body Physics/Basic Principles}
 \input{Theory/Many-Body Physics/secondquantization}
 \input{Theory/Many-Body Physics/Methods and Algorithms}
-\input{Theory/Many-Body Physics/The Lipkin Model}
+\input{Theory/Many-Body Physics/neural net quantum states}
